--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -5,6 +5,9 @@ body {
   padding: 0;
 }
 
-#misscellaneous {
-  display: hidden;
+#joke {
+  font-size: 1.5em;
+  color: #ffffff;
+  text-align: center;
+  margin-top: 10%;
 }
